k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: us-docker.pkg.dev/ambient-tuner-373312/my-repo/app:latest
        ports:
        - containerPort: 8080
